samples/_failures_safe/1761263051_99bc87_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_826c0827.c: In function ‘main’:
./samples/SAFE/__tmp_826c0827.c:169:19: error: missing terminating " character
  169 |         if (scanf("%d
      |                   ^~~
./samples/SAFE/__tmp_826c0827.c:169:9: error: expected expression at end of input
  169 |         if (scanf("%d
      |         ^~
./samples/SAFE/__tmp_826c0827.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_826c0827.c:169:9: error: expected declaration or statement at end of input
